--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
-# Bibliography
-**[1]** [The Editors of Encyclopaedia Britannica Article History], “Complex Number | Britannica”, Mar. 30, 2025. _https://www.britannica.com/science/complex-number_ (accessed Nov. 03, 2025).
+<h1>Bibliography</h1>
+<b>[1]</b> [The Editors of Encyclopaedia Britannica Article History], “Complex Number | Britannica”, Mar. 30, 2025. <em>https://www.britannica.com/science/complex-number</em> (accessed Nov. 03, 2025).
 
-**[2]** I. Lankham, A. Schilling, and B. Nachtergaele, “2.1: Deﬁnition of Complex Numbers", Mar. 05, 2021. __https://math.libretexts.org/Bookshelves/Linear_Algebra/Book%3A_Linear_Algebra_%28Schilling_Nachtergaele_and_Lankham%29/02%3A_Introduction_to_Complex_Numbers/2.01%3A_De%EF%AC%81nition_of_Complex_Numbers__ (accessed Nov. 03, 2025).
+<b>[2]</b> I. Lankham, A. Schilling, and B. Nachtergaele, “2.1: Deﬁnition of Complex Numbers", Mar. 05, 2021. <em>https://math.libretexts.org/Bookshelves/Linear_Algebra/Book%3A_Linear_Algebra_%28Schilling_Nachtergaele_and_Lankham%29/02%3A_Introduction_to_Complex_Numbers/2.01%3A_De%EF%AC%81nition_of_Complex_Numbers</em> (accessed Nov. 03, 2025).
 
-**[3]** Wikipedia Contributors, “Definition of C^2,” Sep. 04, 2024. https://en.wikipedia.org/wiki/Complex_coordinate_space (accessed Nov. 03, 2025).
+<b>[3]</b> Wikipedia Contributors, “Definition of C^2,” Sep. 04, 2024. <em>https://en.wikipedia.org/wiki/Complex_coordinate_space</em> (accessed Nov. 03, 2025).
 
-**[4]** E. Weisstein, “Argand Diagram,” Nov. 03, 2025. _https://mathworld.wolfram.com/ArgandDiagram.html_ (accessed Nov. 03, 2025).
+<b>[4]</b> E. Weisstein, “Argand Diagram,” Nov. 03, 2025. <em>https://mathworld.wolfram.com/ArgandDiagram.html</em> (accessed Nov. 03, 2025).
 
-**[5]** MathCentre, “Modulus and Argument of Complex Numbers” Jan. 01, 2009. _https://www.mathcentre.ac.uk/resources/sigma%20complex%20number%20leaflets/sigma-complex9-2009-1.pdf_ (accessed Nov. 03, 2025).
+<b>[5]</b> MathCentre, “Modulus and Argument of Complex Numbers” Jan. 01, 2009. <em>https://www.mathcentre.ac.uk/resources/sigma%20complex%20number%20leaflets/sigma-complex9-2009-1.pdf</em> (accessed Nov. 03, 2025).
 
-**[6]** D. Haber, “The Principle Argument of a Complex Number,” 2011. _https://scipp.ucsc.edu/~haber/ph116A/arg_11.pdf_ (Accessed: Nov. 03, 2025).
+<b>[6]</b> D. Haber, “The Principle Argument of a Complex Number,” 2011. <em>https://scipp.ucsc.edu/~haber/ph116A/arg_11.pdf</em> (Accessed: Nov. 03, 2025).
 
-**[7]** Higher Maths, “CAST Diagram,” Aug. 11, 2025. _https://www.highermathematics.co.uk/cast-diagram_ (accessed Nov. 03, 2025).
+<b>[7]</b> Higher Maths, “CAST Diagram,” Aug. 11, 2025. <em>https://www.highermathematics.co.uk/cast-diagram</em> (accessed Nov. 03, 2025).
 
-**[8]** GeeksforGeeks, “Polar and Exponential Forms of Complex Numbers,” May 29, 2022. _https://www.geeksforgeeks.org/maths/polar-and-exponential-forms-of-complex-numbers_ 
+<b>[8]</b> GeeksforGeeks, “Polar and Exponential Forms of Complex Numbers,” May 29, 2022. <em>https://www.geeksforgeeks.org/maths/polar-and-exponential-forms-of-complex-numbers</em>
 (accessed Nov. 03, 2025).
 
-**[9]** Proof Wiki, “Product of Complex Numbers in Exponential Form - ProofWiki,” 2020. _https://proofwiki.org/wiki/Product_of_Complex_Numbers_in_Exponential_Form_ (accessed Nov. 04, 2025).
+<b>[9]</b> Proof Wiki, “Product of Complex Numbers in Exponential Form - ProofWiki,” 2020. <em>>https://proofwiki.org/wiki/Product_of_Complex_Numbers_in_Exponential_Form</em> (accessed Nov. 04, 2025).
 
-**[10]** GeeksforGeeks, “DeMoivre’s Theorem,” Jan. 30, 2022. _https://www.geeksforgeeks.org/maths/de-moivres-theorem_ (accessed Nov. 04, 2025).
+<b>[10]</b> GeeksforGeeks, “DeMoivre’s Theorem,” Jan. 30, 2022. <em>https://www.geeksforgeeks.org/maths/de-moivres-theorem</em> (accessed Nov. 04, 2025).
