--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <h1>Bibliography</h1>
-<b>[1]</b> [The Editors of Encyclopaedia Britannica Article History], “Complex Number | Britannica”, Mar. 30, 2025. <em>https://www.britannica.com/science/complex-number</em> (accessed Nov. 03, 2025).
-
-<b>[2]</b> I. Lankham, A. Schilling, and B. Nachtergaele, “2.1: Deﬁnition of Complex Numbers", Mar. 05, 2021. <em>https://math.libretexts.org/Bookshelves/Linear_Algebra/Book%3A_Linear_Algebra_%28Schilling_Nachtergaele_and_Lankham%29/02%3A_Introduction_to_Complex_Numbers/2.01%3A_De%EF%AC%81nition_of_Complex_Numbers</em> (accessed Nov. 03, 2025).
-
-<b>[3]</b> Wikipedia Contributors, “Definition of C^2,” Sep. 04, 2024. <em>https://en.wikipedia.org/wiki/Complex_coordinate_space</em> (accessed Nov. 03, 2025).
-
-<b>[4]</b> E. Weisstein, “Argand Diagram,” Nov. 03, 2025. <em>https://mathworld.wolfram.com/ArgandDiagram.html</em> (accessed Nov. 03, 2025).
-
-<b>[5]</b> MathCentre, “Modulus and Argument of Complex Numbers” Jan. 01, 2009. <em>https://www.mathcentre.ac.uk/resources/sigma%20complex%20number%20leaflets/sigma-complex9-2009-1.pdf</em> (accessed Nov. 03, 2025).
-
-<b>[6]</b> D. Haber, “The Principle Argument of a Complex Number,” 2011. <em>https://scipp.ucsc.edu/~haber/ph116A/arg_11.pdf</em> (Accessed: Nov. 03, 2025).
-
-<b>[7]</b> Higher Maths, “CAST Diagram,” Aug. 11, 2025. <em>https://www.highermathematics.co.uk/cast-diagram</em> (accessed Nov. 03, 2025).
-
-<b>[8]</b> GeeksforGeeks, “Polar and Exponential Forms of Complex Numbers,” May 29, 2022. <em>https://www.geeksforgeeks.org/maths/polar-and-exponential-forms-of-complex-numbers</em>
+<b>[1]</b> E. W. Weisstein, “Complex Number” <em>https://mathworld.wolfram.com/ComplexNumber.html</em> (accessed Nov. 04, 2025).
+<br>
+<b>[2]</b> I. Lankham, A. Schilling, and B. Nachtergaele, "2.1: Deﬁnition of Complex Numbers", Mar. 05, 2021. <em>https://math.libretexts.org/Bookshelves/Linear_Algebra/Book%3A_Linear_Algebra_%28Schilling_Nachtergaele_and_Lankham%29/02%3A_Introduction_to_Complex_Numbers/2.01%3A_De%EF%AC%81nition_of_Complex_Numbers</em> (accessed Nov. 03, 2025).
+<br>
+<b>[3]</b> R. C. Gunning and H. Rossi, "Analytic Functions of Several Complex Variable". American Mathematical Society, 2022. (accessed Nov. 04, 2025).
+<br>
+<b>[4]</b> E. Weisstein, "Argand Diagram" Nov. 03, 2025. <em>https://mathworld.wolfram.com/ArgandDiagram.html</em> (accessed Nov. 03, 2025).
+<br>
+<b>[5]</b> [Unknown Author], "Modulus and Argument of Complex Numbers" Jan. 01, 2009. <em>https://www.mathcentre.ac.uk/resources/sigma%20complex%20number%20leaflets/sigma-complex9-2009-1.pdf</em> (accessed Nov. 03, 2025).
+<br>
+<b>[6]</b> D. Haber, "The Principle Argument of a Complex Number" 2011. <em>https://scipp.ucsc.edu/~haber/ph116A/arg_11.pdf</em> (Accessed: Nov. 03, 2025).
+<br>
+<b>[7]</b> [Unknown Author], "CAST Diagram" Aug. 11, 2025. <em>https://www.highermathematics.co.uk/cast-diagram</em> (accessed Nov. 03, 2025).
+<br>
+<b>[8]</b> [Unknown Author], "Polar and Exponential Forms of Complex Numbers" May 29, 2022. <em>https://www.geeksforgeeks.org/maths/polar-and-exponential-forms-of-complex-numbers</em>
 (accessed Nov. 03, 2025).
-
-<b>[9]</b> Proof Wiki, “Product of Complex Numbers in Exponential Form - ProofWiki,” 2020. <em>>https://proofwiki.org/wiki/Product_of_Complex_Numbers_in_Exponential_Form</em> (accessed Nov. 04, 2025).
-
-<b>[10]</b> GeeksforGeeks, “DeMoivre’s Theorem,” Jan. 30, 2022. <em>https://www.geeksforgeeks.org/maths/de-moivres-theorem</em> (accessed Nov. 04, 2025).
+<br>
+<b>[9]</b> H. A. Priestley, "Introduction to Complex Analysis." OUP Oxford, 2003. (accessed Nov. 04, 2025).
+<br>
+<b>[10]</b> [Unknown Author], "DeMoivre’s Theorem" Jan. 30, 2022. <em>https://www.geeksforgeeks.org/maths/de-moivres-theorem</em> (accessed Nov. 04, 2025).
