Fix bibliography formatting in index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>Bibliography</h1>
-    <h3><b>[1]</b> E. W. Weisstein, “Complex Number” <em>https://mathworld.wolfram.com/ComplexNumber.html</em> (accessed Nov. 04, 2025).</h3>
+    <b>[1]</b> E. W. Weisstein, “Complex Number” <em>https://mathworld.wolfram.com/ComplexNumber.html</em> (accessed Nov. 04, 2025).
     <br>
     <br>
     <b>[2]</b> I. Lankham, A. Schilling, and B. Nachtergaele, "2.1: Deﬁnition of Complex Numbers", Mar. 05, 2021. <em>https://math.libretexts.org/Bookshelves/Linear_Algebra/Book%3A_Linear_Algebra_%28Schilling_Nachtergaele_and_Lankham%29/02%3A_Introduction_to_Complex_Numbers/2.01%3A_De%EF%AC%81nition_of_Complex_Numbers</em> (accessed Nov. 03, 2025).
